--- a/package.json
+++ b/package.json
@@ -22,14 +22,17 @@
   },
   "dependencies": {
     "@nestjs/common": "^9.0.11",
+    "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.11",
     "@nestjs/jwt": "^9.0.0",
+    "@nestjs/mapped-types": "*",
     "@nestjs/mongoose": "^9.2.0",
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.0.11",
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "helmet": "^6.0.0",
     "mongoose": "^6.5.3",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
